--- a/ImgUploaderApi/wwwroot/ImageUploaderForm.html
+++ b/ImgUploaderApi/wwwroot/ImageUploaderForm.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h1 class="mt-5">Image Uploader</h1>
-        <form>
+        <form id="imageUploadForm">
             <div class="mb-3">
                 <label for="imageTitle" class="form-label">Title of Image</label>
                 <input type="text" class="form-control" id="imageTitle" required>
@@ -23,7 +23,8 @@
         </form>
     </div>
     <!-- JS, Popper.js, and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> <!-- Full version of jQuery -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script> <!-- Here is where you link your script.js file -->
 </body>
 </html>
